[gd_scene load_steps=21 format=3 uid="uid://b345y5ybsmuar"]

[ext_resource type="Texture2D" uid="uid://dxncxvcp5kxfj" path="res://Entities/Ghoul/ghoul.png" id="1_iu48a"]
[ext_resource type="Script" path="res://Entities/Ghoul/ghoul.gd" id="1_juya6"]
[ext_resource type="PackedScene" uid="uid://b5mhaodm6g8i5" path="res://Entities/HitBox/damage_dealer_area.tscn" id="3_yip7v"]
[ext_resource type="PackedScene" uid="uid://2nfy1ysxtck8" path="res://Entities/HitBox/damage_receiver_area.tscn" id="4_lu8jx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n3jq0"]
radius = 4.0
height = 20.0

[sub_resource type="Animation" id="Animation_jjcjc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageDealerArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_77x3j"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageDealerArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_5lcr0"]
resource_name = "dead"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [41]
}

[sub_resource type="Animation" id="Animation_oxcif"]
resource_name = "disappear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_511v5"]
resource_name = "dying"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [40, 41]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_dying"
}]
}

[sub_resource type="Animation" id="Animation_8rtua"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_hurt"
}]
}

[sub_resource type="Animation" id="Animation_n47ct"]
resource_name = "idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_b2k7d"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_dy5uq"]
resource_name = "run"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n5tad"]
_data = {
"RESET": SubResource("Animation_jjcjc"),
"attack": SubResource("Animation_77x3j"),
"dead": SubResource("Animation_5lcr0"),
"disappear": SubResource("Animation_oxcif"),
"dying": SubResource("Animation_511v5"),
"hurt": SubResource("Animation_8rtua"),
"idle": SubResource("Animation_n47ct"),
"jump": SubResource("Animation_b2k7d"),
"run": SubResource("Animation_dy5uq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1fim"]
size = Vector2(302, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvdle"]
size = Vector2(117, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bivbd"]
size = Vector2(13.5, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2ebl"]
size = Vector2(15, 11.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5507"]
size = Vector2(24, 24)

[node name="Ghoul" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_juya6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_iu48a")
offset = Vector2(0, -16)
hframes = 10
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n3jq0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_n5tad")
}

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -33)
shape = SubResource("RectangleShape2D_i1fim")

[node name="PlayerInReachArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInReachArea"]
position = Vector2(58.5, -14)
shape = SubResource("RectangleShape2D_pvdle")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(11, -8)
shape = SubResource("RectangleShape2D_bivbd")

[node name="RightLegRaycast" type="RayCast2D" parent="."]
position = Vector2(16, -3)
target_position = Vector2(0, 8)

[node name="LeftLegRaycast" type="RayCast2D" parent="."]
position = Vector2(-16, -3)
target_position = Vector2(0, 8)

[node name="RightArmRaycast" type="RayCast2D" parent="."]
position = Vector2(9, -17)
target_position = Vector2(10, 0)
collision_mask = 5

[node name="LeftArmRaycast" type="RayCast2D" parent="."]
position = Vector2(-9, -17)
target_position = Vector2(-10, 0)
collision_mask = 5

[node name="DamageDealerArea" parent="." instance=ExtResource("3_yip7v")]
collision_layer = 128
monitoring = false
damage = 1

[node name="CollisionShape2D" parent="DamageDealerArea" index="0"]
position = Vector2(13.625, -11)
rotation = 1.5708
shape = SubResource("RectangleShape2D_n2ebl")

[node name="DamageReceiverArea" parent="." instance=ExtResource("4_lu8jx")]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" parent="DamageReceiverArea" index="0"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_y5507")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[editable path="DamageDealerArea"]
[editable path="DamageReceiverArea"]
